Fixed a couple of things, but now we're getting a scrollbar on the right for some reason.

--- a/assets/css/Rogue-19.css
+++ b/assets/css/Rogue-19.css
@@ -1,6 +1,8 @@
 html,body,canvas {
 	margin: 0;
+	padding: 0;
 	cursor: crosshair;
+	height: 100%;
 }
 
 body {
@@ -9,10 +11,8 @@ body {
 	font-family: Segoe UI;
 	font-size: 1.5em;
 	width: 100%;
-	height: 100%;
 }
 
 canvas {
 	width: 100%;
-	height: 100%;
 }
